<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.luis.agenda.MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/menu_texto"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_width="350dp"
            android:layout_height="35dp"
            android:textStyle="bold"
            android:textSize="25dp"
            android:gravity="center"
            android:textColor="@color/titulos"
            android:text="@string/menu_texto" />

        <Button
            android:id="@+id/alta_contacto"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_below="@+id/menu_texto"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="60dp"
            android:background="@color/alta_fondo"
            android:onClick="Altas"
            android:text="@string/alta_contacto"
            android:textColor="@color/alta_texto"
            android:textSize="18dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/leer_contacto"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_alignStart="@+id/alta_contacto"
            android:layout_below="@+id/alta_contacto"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="40dp"
            android:background="@color/modificar_fondo"
            android:onClick="Busquedas"
            android:text="@string/leer_contacto"
            android:textColor="@color/modificar_texto"
            android:textSize="18dp"
            android:textStyle="bold" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
